Fix image sizes on smaller screens

--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -4,9 +4,21 @@
   max-width: 50vw;
 }
 
+.project-image {
+  max-width: 75%;
+  height: auto;
+  border-radius: 8px;
+  margin: 0 auto;
+  display: block;
+}
+
 @media (max-width: 700px) {
   .child {
     max-width: 90vw;
+  }
+
+  .project-image {
+    max-width: 100%;
   }
 }
 
@@ -22,12 +34,4 @@
 
 .icon-bar a:hover {
   background-color: #000;
-}
-
-.project-image {
-  max-width: 75%;
-  height: auto;
-  border-radius: 8px;
-  margin: 0 auto;
-  display: block;
 }
